sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value x
				x=x+1
                                ^AlgCocktailSort1:16: error: not found: value valeur
			valeur = 0 
                        ^